2008-01-19  Alex Graveley  <alex@beatniksoftware.com>

	* er.js: Merge options passed to Ajax API with those of
	Er.Ajax.DefaultOptions.  In Er.Ajax.get, convert urldata to query
	parameters.

2007-12-30  Alex Graveley  <alex@beatniksoftware.com>

	* er.js: Make sleep's argument optional, defaulting to 0.

2007-12-29  Alex Graveley  <alex@beatniksoftware.com>

	* er.js: In Er.DOM, split out event subscription and onetime event
	receive, and make the listener remove itself if it's a onetime.

2007-12-29  Alex Graveley  <alex@beatniksoftware.com>

	* er.js: In Er.Ajax.start, convert POST data to param string.  Add
	Er.Ajax.json, which calls eval on the result message.  Rework to
	not spawn a pid to handle each request.

2007-12-29  Alex Graveley  <alex@beatniksoftware.com>

	* index.html: Move Er.DOM section out of Future Work section,
	since it kinda already works.

	* test.html: Make the text a little less silly.  Add a document
	click handler proc that uses Er.DOM.receive.  Add a link killer
	proc that sleeps and exits abnormally.

	* er.js: Documentation cleanups.  Split non-current process exit
	into ErProc._linkexit.  Make Er.Ajax.post just return the URL
	content directly instead of the message, and throw the message as
	an exception on failed download.

2007-12-28  Alex Graveley  <alex@beatniksoftware.com>

	* er.js: Add Er.DOM.receive, a synchronous DOMEvent listener.  In
	_copy, don't attempt to copy Element, Document, or Event objs.
	
2007-12-28  Alex Graveley  <alex@beatniksoftware.com>

	* er.js: Make link/unlink symmetric, so exit of either link will
	signal the other.  Make exit(pid, reason) to kill another process
	work.  Make link exiting immediate, instead of waiting for
	Er.receive to see the message.  Recycle unused pids.  Recursively
	copy messages passed to Er.send.  Drop unused ErProc._THREAD.

2007-12-26  Alex Graveley  <alex@beatniksoftware.com>

	* er.js (ErProc._threadmain): Apply spawned function to new